@@ -2,6 +2,7 @@ ImageViewer Release Notes
 Author: Steve Corbett
 
 Version 2.2 [TODO] - Image sets
+  #38 - Re-query for extra panels on reloadUI()
   #37 - Dynamic main menu based on browse mode
   #36 - Fix image panel nesting on main window
   #35 - Allow extensions to supply image set toolbar buttons
